--- a/.github/workflows/build_test_eshop.yaml
+++ b/.github/workflows/build_test_eshop.yaml
@@ -96,3 +96,32 @@ jobs:
         run: |
           npm run test
 # End of test section
+
+# Deploy section
+  Depoly:
+    needs: [Build, Test]
+    runs-on: ubuntu-latest
+    if: ${{ github.ref =='refs/heads/master' }}
+
+    steps:
+      - name: Git CheckOut
+        uses: actions/checkout@v3
+        with:
+          token: ${{ secrets.WORKFLOW_TOCKEN }}
+
+      - name: Load node modules and build folder
+        uses: actions/cache@v3
+        with: 
+          path: |
+            ~/.npm
+            ./node_modules
+            ./build
+          key: ${{ runner.os }}-build-${{ github.run_id }}
+        
+      - name: Deploy to Firebase
+        uses: lowply/deploy-firebase@v0.0.5
+        env:
+          FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOCKEN }}
+          FIREBASE_PROJECT: broulik-devops
+# End of deploy section
+
